# nrf54l15-course-code

./: .gitignore  README.md
.githooks/: pre-commit
lib/pulse_sensor/: pulse_sensor.c  pulse_sensor.h
phase0_raw_adc/solution/: prj.conf
phase0_raw_adc/solution/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
phase0_raw_adc/solution/src/: main.c
phase0_raw_adc/starter/: CMakeLists.txt
phase0_raw_adc/starter/src/: main.c
phase1_bpm_detection/solution/: CMakeLists.txt  prj.conf
phase1_bpm_detection/solution/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
phase1_bpm_detection/solution/src/: main.c
phase1_bpm_detection/starter/: prj.conf
phase1_bpm_detection/starter/src/: main.c
phase2_nrfx_saadc/solution/: CMakeLists.txt  prj.conf
phase2_nrfx_saadc/solution/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
phase2_nrfx_saadc/solution/src/: main.c
phase2_nrfx_saadc/starter/: prj.conf
phase2_nrfx_saadc/starter/src/: main.c
phase3_timer_dppi/solution/: prj.conf
phase3_timer_dppi/solution/src/: main.c
phase3_timer_dppi/starter/: CMakeLists.txt  prj.conf
phase3_timer_dppi/starter/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
phase3_timer_dppi/starter/src/: STARTER_NOTE.txt  main.c
phase4_grtc_idle/solution/: prj.conf
phase4_grtc_idle/starter/: CMakeLists.txt  prj.conf
phase5_ble_hrs/solution/: prj.conf
phase5_ble_hrs/starter/: CMakeLists.txt
phase6_secure_hrs/solution/: CMakeLists.txt  prj.conf
phase6_secure_hrs/solution/src/: main.c
phase6_secure_hrs/starter/: prj.conf
tampc_demo/: CMakeLists.txt  prj.conf
tampc_demo/src/: main.c
(+6 files in other folders)
